# rhasspy-asr-kaldi-hermes

./: .dockerignore  .gitignore  Dockerfile  Makefile  Makefile.in  README.md  __main__.py  configure  configure.ac  requirements.txt  requirements_all.txt  requirements_dev.txt  rhasspy-asr-kaldi-hermes.in  rhasspy_wheels.txt  rhasspyasr_kaldi_hermes.spec  setup.py
.github/workflows/: tests.yml
debian/DEBIAN/: control
docker/: rhasspy-asr-kaldi-hermes
rhasspyasr_kaldi_hermes/: __init__.py  __main__.py  messages.py  utils.py
scripts/: build-debian.sh  build-docker.sh  build-pyinstaller.sh
tests/: test_rhasspyasr_kaldi_hermes.py
